# planning-sim

./: .drone.yml  .gitignore  .gitmodules  BENCHMARK_TESTS.sh  CMakeLists.txt  README.md  RUN_PLANNING.sh  benchmark-print.sh  default_config.yaml  docker-compose.yml  launch_script.sh  package.xml  readme.txt  run-docker.sh
launch/: dron_AI_1503.launch  fuser.launch  run_nodes.launch
msg/: droneCmd.msg  groundRobot.msg  groundRobotList.msg  track.msg
planning_ros_sim/: CMakeLists.txt  package.xml
planning_ros_sim/src/: gui.cpp  perception_control.cpp  planning.cpp  sim.h
planning_ros_sim/src/AI/: AI.cpp  AI.h  ActionTreeCode.h  Drone.cpp  Plank.cpp  Plank.h  Robot.cpp  Robot.h  SimSim.h  State.cpp  State.h  World.cpp  checklist.cpp  main.cpp  run  structs.h
planning_ros_sim/src/ai-sim/: gui.cpp  sim.h
src/: CMakeLists.txt  Valueiteration3d.py  action_safety_checker.cpp  benchmark_perception_control.cpp  conv.cpp  fuser.cpp  fuser.h  idle_state.h  perception_control.cpp  planning.cpp  sim  sim_no_gui
src/AI/: .World.cpp.swp  AI.cpp  AI.h  AIController.cpp  AIController.h  AccessToSim.cpp  AccessToSim.h  ActionTreeCode.h  Drone.cpp  Drone.h  KalmanRobot.cpp  KalmanRobot.h  Observation.cpp  Observation.h  Plank.cpp  Plank.h  Robot.cpp  Robot.h  State.cpp  State.h  TreeSearch.cpp  TreeSearch.h  Valuegrid.txt  World.cpp  World.h  checklist.cpp  config.conf  makefile  sim.h  structs.cpp  structs.h
src/AI/StateMachine/: BeginState.cpp  BeginState.h  IdleState.cpp  IdleState.h  LandInFrontState.cpp  LandInFrontState.h  LandOnTopState.cpp  LandOnTopState.h  MissionCompleteState.cpp  MissionCompleteState.h  NoInputState.cpp  NoInputState.h  PlanningFSM.cpp  PlanningFSM.h  PositioningState.cpp  PositioningState.h  PrestartState.cpp  PrestartState.h  SearchState.cpp  SearchState.h  StateInterface.cpp  StateInterface.h
src/AI/TreeSearch/: AccessToSim.cpp  AccessToSim.h  Node.cpp  Node.h  TreeSearch.cpp  TreeSearch.h  sim.h
src/AI/state_machine/: Planning_FSM.cpp  StateInterface.h  no_input_state.cpp  no_input_state.h  state_interface.h
src/BenchmarkLaunch/: BENCHMARK_TESTS.sh  SINGLE_RUN.sh
src/RViz_nodes/: AIWorldObservationVisualization.cpp
src/Valueiteration/: Actiongrid.txt  Untitled.ipynb  Valuegrid with robots.ipynb  Valuegrid.txt  Valueiteration3d.py  With obstacle ring.ipynb
src/Valueiteration/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Valuegrid with robots-checkpoint.ipynb  With obstacle ring-checkpoint.ipynb
src/ai-sim/: .gitignore  COMPILE_AND_RUN_SIM.sh  COMPILE_FOR_MAC_AND_RUN_SIM.sh  Dockerfile  RUN.sh  a.out  gui.cpp  imgui.ini  sim  sim.h  udp.h
src/docker-build-cache/: Dockerfile
src/launch/: planning_ros.launch
src/test/: ai_test.cpp  drone_test.cpp  fuser_test.cpp  plank_test.cpp  robot_test.cpp  world_test.cpp
src/tools/: config.cpp  config.h
