<?xml version="1.0"?>
<package>
  <name>planning_ros_sim</name>
  <version>1.0.0</version>
  <description>The planning_ros_sim package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="vilde.gjaerum@gmail.com">vilde</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!-- Use test_depend for packages you need only for testing: -->
  <test_depend>gtest</test_depend>
  <test_depend>libAI</test_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>msg</build_depend>
  <run_depend>msg</run_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>ascend_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>ascend_msgs</run_depend>

  <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>
  <build_depend>eigen3</build_depend>
  <run_depend>eigen3</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
